--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="insight-app-sec-validation" content="81554d6f-b239-47cf-9030-4f127b0140f2">
   <title>My Azure Static Web App</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin: 50px; }
@@ -10,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to My Azure Static Web App!</h1>
+  <h1>Welcome to My Azure Static Web App!AAAAAAAAAAAAAAAAA</h1>
   <p>This is a simple example of a static website hosted on Azure.</p>
 </body>
 </html>
