--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="insight-app-sec-validation" content="81554d6f-b239-47cf-9030-4f127b0140f2">
+  <meta name="insight-app-sec-validation" content="4eccba8c-0a60-49e7-8119-13071af832c6">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Azure Static Web App</title>
   <style>
@@ -12,6 +12,6 @@
 </head>
 <body>
   <h1>Welcome to My Azure Static Web App!</h1>
-  <p>This is a simple example of a static website hosted on Azure.</p>
+  <p>This is a simple example of a static website hosted on Azure.CCCCCCCCCCCC</p>
 </body>
 </html>
