--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="insight-app-sec-validation" content="a8be7132-3120-421b-9ca4-e2ebe959e975">
   <meta charset="UTF-8">
-  <meta name="insight-app-sec-validation" content="4eccba8c-0a60-49e7-8119-13071af832c6">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Azure Static Web App</title>
   <style>
@@ -12,6 +12,6 @@
 </head>
 <body>
   <h1>Welcome to My Azure Static Web App!</h1>
-  <p>This is a simple example of a static website hosted on Azure.CCCCCCCCCCCC</p>
+  <p>This is a simple example of a static website hosted on Azure.Rapid7</p>
 </body>
 </html>
