--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta name="insight-app-sec-validation" content="5e98a248-a815-4673-8df9-ffa23c9a001c">
+  <meta name="rapid7-site-verification" content="5e98a248-a815-4673-8df9-ffa23c9a001c">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Azure Static Web App</title>
@@ -12,6 +13,6 @@
 </head>
 <body>
   <h1>Welcome to My Azure Static Web App!</h1>
-  <p>This is a simple example of a static website hosted on Azure.Rapid7</p>
+  <p>This is a simple example of a static website hosted on Azure.Rapid702</p>
 </body>
 </html>
